-optimized for large screen displays -mobile compatible version -mobile optimization:  font resizes based on screen size -navbar fix -sidebar goes into the main pullout side bar when on mobile view

--- a/don-drivingschool/static/css/style.css
+++ b/don-drivingschool/static/css/style.css
@@ -838,7 +838,7 @@ body > .navbar-collapse .navbar-search .btn-primary:hover {
 }
 .header-11 .header-background {
   background: #f9f9f9;
-  border-bottom: 2px solid #4595DB;
+ 
  
 }
 .header-11 .navbar {
@@ -899,10 +899,12 @@ body > .navbar-collapse .navbar-search .btn-primary:hover {
   color: #4595DB;
   font-weight: 400;
 }
+
 .header-11 .navbar .nav > li > a:hover,
 .header-11 .navbar .nav > li > a:focus,
 .header-11 .navbar .nav > li > a.active {
-  color: #16a085;
+  color: #4595DB;
+  font-weight: 600;
 }
 .header-11 .navbar .navbar-toggle {
   background-image: url("../../startup/common-files/icons/menu-icon-header-8@2x.png");
@@ -913,13 +915,13 @@ body > .navbar-collapse .navbar-search .btn-primary:hover {
   margin-top: 15px;
 }
 .header-11-sub {
-  padding-top: 183px;
-  padding-bottom: 183px;
+  padding-top: 30vh;
+  padding-bottom: 30vh;
   color: #bdc3c7;
   position: relative;
 }
 .header-11-sub h3 {
-  font-size: 33px;
+  font-size: 3vw;
   font-weight: normal;
   color: white;
   margin-bottom: 15px;
@@ -957,7 +959,11 @@ body > .navbar-collapse .navbar-search .btn-primary:hover {
   opacity: 1;
   filter: alpha(opacity=100);
 }
-
+@media (min-width: 768px) {
+	.header-11 .navbar .nav > li.sidebar > a {
+		display:  none; 
+	}	
+}
 @media (max-width: 767px) {
   .header-11-sub {
     padding-top: 68px;
@@ -1540,7 +1546,7 @@ body > .navbar-collapse .navbar-search .btn-primary:hover {
 
 /* ----------- Other Components ----------- */
 .img-background {
-	height: 250px;
+	max-height: 250px;
 	width: 100%;
 	background: 50% 50% no-repeat;
   -webkit-background-size: cover;
@@ -1564,8 +1570,7 @@ body > .navbar-collapse .navbar-search .btn-primary:hover {
 
 .img-background h5 {
 	color: white;
-	padding-top: 30%;
-	padding-bottom: 30%;
+	line-height: 250px;
 	padding-left: 10%;
 }
 
@@ -1589,11 +1594,11 @@ body > .navbar-collapse .navbar-search .btn-primary:hover {
 
 
 .banner-device-image {
-	height: 460px;
+	height: 70vh;
 	width: auto;
 	position: absolute;
     right: 120px;
-    bottom: -183px;
+    bottom: 0px;
 }
 @media (max-width: 800px) {
 	.banner-device-image {
